--- a/BCientificas/Principal.Master
+++ b/BCientificas/Principal.Master
@@ -1,4 +1,4 @@
-﻿<%@ Master Language="C#" AutoEventWireup="true" CodeBehind="Principal.master.cs" Inherits="BCientificas.Principal" %>
+﻿ <%@ Master Language="C#" AutoEventWireup="true" CodeBehind="Principal.master.cs" Inherits="BCientificas.Principal" %>
 
 <!DOCTYPE html>
 
@@ -7,6 +7,11 @@
     <title></title>
     <asp:ContentPlaceHolder ID="head" runat="server">
     </asp:ContentPlaceHolder>
+    <style type="text/css">
+        .auto-style1 {
+            height: 24px;
+        }
+    </style>
 </head>
 <body>
     <form id="form1" runat="server">
@@ -20,29 +25,34 @@
     </table>
             <table id="navegacion"  border="0" style="height: 26px">
     <tr>
-    <td class="areanavegacion">
+    <td class="auto-style1">
         Usted esta en:
+
+        
+
         <asp:SiteMapPath ID="SiteMapPath1" runat="server" Font-Names="Verdana" Font-Size="0.8em"
             PathSeparator=" : ">
             <PathSeparatorStyle Font-Bold="True" ForeColor="#5D7B9D" />
             <CurrentNodeStyle ForeColor="#333333" />
-            <NodeStyle Font-Bold="True" ForeColor="#7C6F57" />
+            <NodeStyle Font-Bold="True" ForeColor="#7C6F57"/>
             <RootNodeStyle Font-Bold="True" ForeColor="#5D7B9D" />
         </asp:SiteMapPath>
     
     </td>
-        <td class="areanavegacion">
+        <td class="auto-style1">
             Usuario:<asp:LoginName ID="LoginName1" runat="server" />
             <asp:LoginStatus ID="LoginStatus1" runat="server" LogoutAction="Redirect" LogoutPageUrl="~/Login.aspx"
-                LogoutText="Cerrar Sesion" />
+                LogoutText="Cerrar Sesion" OnLoggingOut="LoginStatus1_LoggingOut" />
         </td>
     </tr>
     </table>
             <table id="cuerpo" border="0">
     <tr>
     <td class="areamenu">
+
+
         <asp:TreeView ID="TreeView1" runat="server" DataSourceID="SiteMapDataSource1"
-            ImageSet="Arrows">
+            ImageSet="Arrows" OnSelectedNodeChanged="TreeView1_SelectedNodeChanged">
             <ParentNodeStyle Font-Bold="False" />
             <HoverNodeStyle Font-Underline="True" ForeColor="#5555DD" />
             <SelectedNodeStyle Font-Underline="True" ForeColor="#5555DD" HorizontalPadding="0px"
@@ -50,6 +60,9 @@
             <NodeStyle Font-Names="Verdana" Font-Size="8pt" ForeColor="Black" HorizontalPadding="5px"
                 NodeSpacing="0px" VerticalPadding="0px" />
         </asp:TreeView>
+
+
+
     </td>
     
     <td style="width: 167px"  class="piecontenido">
@@ -61,6 +74,7 @@
     </table>
 
         </div>
+           <asp:SiteMapDataSource ID="SiteMapDataSource1" runat="server" />
     </form>
 </body>
 </html>
